# dual-readout

./: README.md  aftermake.sh  build.sh  edm4dr.yaml  gps.py  init_build.sh  move.sh  run_ele.co  runel.co  runelen.co  runen.sh  rungaen.co  rungen.sh  rungps.sh  rungun.sh  runpi-en.co  runpi0en.co  runpien.co  runuu.co  setenv.sh  setuos.sh  tonpz.py
DRreco/include/: DRcalib2D.h  DRcalib3D.h
DRreco/src/: DRcalib2D.cpp  DRcalib3D.cpp
DRsim/: CMakeLists.txt  DRsim.cc  compacts.txt  run_en.mac  run_gps.mac  run_hepmc.mac
Detector/DRcalo/: CMakeLists.txt
Detector/DRcalo/compact/: DRtarget.xml  DRtarget_template.xml
Detector/DRcalo/include/: DRconstructor.h
Detector/DRcalo/src/: DRconstructor.cpp
Detector/DRsegmentation/src/: GridDRcalo.cpp  GridDRcalo.h
Reco/: Reco.cc
Reco/src/: RecoTower.cc
analysis/: CMakeLists.txt  JER.cc  buf.cc  hep.cc  image.cc  integrity.cc  label.cc  onlyptc.cc  process.cc  process.cpp  process.cpp.bak  recotest.cc
edm4dr/: CMakeLists.txt  log
edm4dr/edm4hep/: CalorimeterHit_Tower.h  CalorimeterHit_TowerCollection.h  CalorimeterHit_TowerConst.h  CalorimeterHit_TowerData.h  CalorimeterHit_TowerObj.h  CalorimeterHit_TowerSIOBlock.h  ObjectID.h  SparseVector.h  SparseVectorCollection.h  SparseVectorConst.h  SparseVectorData.h  SparseVectorObj.h  SparseVectorSIOBlock.h
edm4dr/src/: CalorimeterHit_Tower.cc  CalorimeterHit_TowerCollection.cc  CalorimeterHit_TowerConst.cc  CalorimeterHit_TowerObj.cc  CalorimeterHit_TowerSIOBlock.cc  SparseVector.cc  SparseVectorCollection.cc  SparseVectorConst.cc  SparseVectorObj.cc  SparseVectorSIOBlock.cc  selection.xml
rootIO/: CMakeLists.txt
rootIO/include/: RecoInterface.h  RootInterface.h
rootIO/src/: RecoInterface.cc  RootInterface.cc
tools/: hep.py  runhep.sh
